Logo spacing quick fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -173,6 +173,8 @@ body {
     padding-right: 4.75em;
   }
   .header {
+    position: relative;
+    top: 2em;
     &__logo {
       max-width: 12.5rem;
     }
